fixed scrollbar css variable bug

--- a/src/app/main.css
+++ b/src/app/main.css
@@ -3,6 +3,24 @@
 @tailwind utilities;
 
 @layer base {
+    :root {
+        --text: 0 0% 0%;
+        --text-50: 0 0% 4%;
+        --text-100: 0 0% 8%;
+        --text-150: 0 0% 12%;
+        --text-200: 0 0% 18%;
+        --text-250: 0 0% 20%;
+        --text-300: 0 0% 24%;
+
+        --background: 0 0% 100;
+        --background-50: 0 0% 96%;
+        --background-100: 0 0% 92%;
+        --background-150: 0 0% 88%;
+        --background-200: 0 0% 84%;
+        --background-250: 0 0% 80%;
+        --background-300: 0 0% 76%;
+    }
+
     [data-theme="light"] {
         --text: 0 0% 0%;
         --text-50: 0 0% 4%;
@@ -12,7 +30,7 @@
         --text-250: 0 0% 20%;
         --text-300: 0 0% 24%;
 
-        --background: 0 0% 100%;
+        --background: 0 0% 100;
         --background-50: 0 0% 96%;
         --background-100: 0 0% 92%;
         --background-150: 0 0% 88%;
@@ -54,7 +72,7 @@
         --file: 336 77% 32%;
     }
 	
-	[data-theme="dark"] {
+    [data-theme="dark"] {
         --text: 0 0% 100%;
         --text-50: 0 0% 96%;
         --text-100: 0 0% 92%;
@@ -205,40 +223,40 @@
         --folder: 349 89% 72%;
         --file: 179 85% 84%;
     }
-}
 
-html, body {
-    width: 100%;
-    height: 100%;
+    html, body {
+        width: 100%;
+        height: 100%;
 
-    background-color: var(--background);
+        background-color: hsl(var(--background));
 
-    overflow: hidden;
-}
+        overflow: hidden;
+    }
+    
+    * {
+    	margin: 0;
+    	padding: 0;
+    	box-sizing: border-box;
+    }
+    
+    ::-webkit-scrollbar {
+        width: 0.65rem;
+        height: 0.65rem;
 
-* {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-}
-
-::-webkit-scrollbar {
-    width: 0.75rem;
-    height: 0.75rem;
-}
-
-::-webkit-scrollbar-track, ::-webkit-scrollbar-corner {
-    background-color: var(--ui-accent-400);
-}
-
-::-webkit-scrollbar-thumb {
-    background-color: var(--text);
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background-color: var(--text-shade-1);
-}
-
-::-webkit-scrollbar-thumb:active {
-    background-color: var(--text-shade-2);
+        background-color: hsl(var(--background));
+    }
+    
+    ::-webkit-scrollbar-thumb {
+        background-color: hsl(var(--background-300));
+        
+        border-radius: 1.3rem;
+    }
+    
+    ::-webkit-scrollbar-thumb:hover {
+        background-color: hsl(var(--background-200));
+    }
+    
+    ::-webkit-scrollbar-thumb:active {
+        background-color: hsl(var(--background-150));
+    }
 }
